<resources>
    <string name="app_name">StockSmart</string>
    <string name="inventory">Inventory</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="add">Add New Entry</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in">Please sign in below.</string>
    <string name="welcome">Welcome to StockSmart!</string>
    <string name="register">Create an account below.</string>
    <string name="add_item">Add New Inventory</string>
    <string name="edit_item">Edit Item</string>
    <string name="back">Go back</string>
    <string name="logout">Logout</string>
</resources>
