<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:background="@color/brown"
        android:columnCount="4"
        android:rowCount="1">

        <TextView
            android:layout_columnSpan="1"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <Space
            android:layout_width="30dp"
            />

        <Button
            android:id="@+id/loginButton"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/tan"
            android:text="@string/login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:backgroundTint="@color/tan"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:backgroundTint="@color/tan"
            android:layout_marginRight="10dp" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>