<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/brown"
        android:columnCount="5"
        android:rowCount="2"
        android:useDefaultMargins="true"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_width="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/description"
            android:textColor="@color/white" />

        <TextView
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_width="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/quantity"
            android:textColor="@color/white" />

        <TextView
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_width="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/unit"
            android:textColor="@color/white" />

        <TextView
            android:layout_column="4"
            android:layout_columnSpan="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textColor="@color/white" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>