<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:background="@color/white"
        android:columnCount="5"
        android:rowCount="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="5"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:text="@string/edit_item"
            android:textColor="@color/orange"
            android:textSize="30sp" />

        <EditText
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnSpan="3"
            android:hint="Item description"
            android:textColor="@color/orange"
            android:backgroundTint="@color/orange"
            android:layout_margin="15dp"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:layout_column="2"
            android:layout_row="2"
            android:layout_columnSpan="3"
            android:hint="Item quantity"
            android:textColor="@color/orange"
            android:backgroundTint="@color/orange"
            android:layout_margin="15dp"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:layout_column="2"
            android:layout_row="3"
            android:layout_columnSpan="3"
            android:hint="Unit"
            android:textColor="@color/orange"
            android:backgroundTint="@color/orange"
            android:layout_margin="15dp"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/submitEditedItemButton"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:backgroundTint="@color/tan" />

        <Button
            android:id="@+id/backFromEditScreenButton"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:backgroundTint="@color/tan" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>